appId: ${APP_ID}
env:
  EMAIL: 'test@gmail.com'
  PASSWORD: 'qwertqwe'
---
- assertVisible:
    id: 'loginButton'
- tapOn:
    id: 'loginButton'
- assertVisible:
    id: 'emailInputError'
- assertVisible:
    id: 'passwordInputError'
- tapOn:
    id: 'emailInput'
- inputText: 'email'
- assertVisible:
    id: 'emailInputError'
- eraseText
- inputText: ${EMAIL}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'passwordInput'
- inputText: ${PASSWORD}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'loginButton'
- assertVisible: 'Explore'
