appId: ${APP_ID}
env:
  EMAIL: 'test@gmail.com'
  FULLNAME: 'Juan Carlos'
  PASSWORD: 'qwertqwe'
---
- assertVisible:
    id: 'registerLink'
- tapOn:
    id: 'registerLink'
- assertVisible:
    id: 'title'
- assertVisible:
    id: 'loadingButton'
- tapOn:
    id: 'loadingButton'
- assertVisible:
    id: 'emailInputError'
- assertVisible:
    id: 'passwordInputError'
- assertVisible:
    id: 'fullNameInputError'
- assertVisible:
    id: 'confirmPasswordInputError'
- tapOn:
    id: 'emailInput'
- inputText: 'email'
- assertVisible:
    id: 'emailInputError'
- eraseText
- inputText: ${EMAIL}
- assertNotVisible:
    id: 'emailInput-Error'
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'fullNameInput'
- inputText: ${FULLNAME}
- runFlow: ../utils/hide-keyboard.yaml
- assertNotVisible:
    id: 'fullNameError'
- tapOn:
    id: 'passwordInput'
- inputText: ${PASSWORD}
- assertNotVisible:
    id: 'passwordInputError'
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'confirmPasswordInput'
- inputText: 'testing'
- assertVisible:
    id: 'confirmPasswordInputError'
- eraseText
- inputText: ${PASSWORD}
- assertNotVisible:
    id: 'confirmPasswordInputError'
- assertNotVisible: ${PASSWORD}
- tapOn:
    id: 'showPassword'
- assertVisible: ${PASSWORD}
- tapOn:
    id: 'loadingButton'
- assertVisible:
    id: 'confirmCodeText'
- inputText: '1234'
- assertVisible: 'Explore'
- assertVisible:
    id: 'accountTab'
- tapOn:
    id: 'accountTab'
- assertVisible: 'Account'
- assertVisible:
    id: 'signOutButton'
- tapOn:
    id: 'signOutButton'
- assertVisible:
    id: 'title'
